# sdv-edge-gateway

./: .gitignore  CMakeLists.txt  README.md
cloud/dashboard/: api_handler.py
cloud/iot_setup/: create_infrastructure.py  create_thing.py  send_command.py  test_send_command.py
cloud/lambda/: diagnostic_agent.py
config/: config.yaml
dbc/: toyota_corolla.dbc
deploy/systemd/: README.md  can-interfaces.service
docs/: architecture.md
docs/superpowers/plans/: 2026-07-13-downlink-schema-fix.md
docs/superpowers/specs/: 2026-07-13-downlink-command-schema-fix-design.md
include/can_layer/: can_reader.hpp  can_writer.hpp  signal_decoder.hpp
include/common/: debug_log.hpp  dlt_wrapper.hpp  safe_queue.hpp  timestamp.hpp  types.hpp
include/gateway/: anomaly_detector.hpp  command_handler.hpp  offline_buffer.hpp  ota_agent.hpp  telemetry_publisher.hpp
models/: README.md
safety/: ASIL_ANALYSIS.md  TARA.md
src/: main.cpp
src/analytics/: CMakeLists.txt
src/can_layer/: CMakeLists.txt  can_reader.cpp  can_writer.cpp  signal_decoder.cpp
src/gateway/: CMakeLists.txt  anomaly_detector.cpp  command_handler.cpp  offline_buffer.cpp  ota_agent.cpp  telemetry_publisher.cpp
src/security/: CMakeLists.txt
tests/: CMakeLists.txt  fake_broker.py  run_command_handler_shutdown_test.sh  test_command_handler_shutdown.cpp
tools/: adas_simulator.py  anomaly_detector.onnx  anomaly_detector.onnx.data  can_injector.py  train_anomaly_model.py
